--- a/src/main/resources/templates/SacolasPapelOrcamento.html
+++ b/src/main/resources/templates/SacolasPapelOrcamento.html
@@ -24,7 +24,7 @@
                     <a href="/SacolasPlasticas">
                         <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
                     </a>
-                    <a href="SacolasPapelOrcamentoFinal.html">
+                    <a href="/SacolasPapelOrcamento">
                         <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
                     </a>
                     <button type="button" class="btn btn-outline-warning">Contatos</button>
@@ -44,17 +44,39 @@
     </div>
 
     <section class="formulario">
-        <h2 class="formulario-titulo">Orçamento Sacola de Papel</h2>
+        <h2 class="formulario-titulo1">Orçamento Sacola de Papel</h2>
 
         <form action="resultadoOrcamento" method="POST" th:object="${tamanhoSacolas}">
-            <label class="formulario-titulo">Escolha o Tamanho da Sacola:</label>
+            <label class="formulario-titulo"><b>Escolha o Tamanho da Sacola:</b></label>
             <select th:field="*{tamanhoBase}">
-                <option value="1">16X26</option>
-                <option value="2">23X34</option>
+                <option value="0">15X17X6</option>
+                <option value="0.5">18X15X</option>
+                <option value="1">16X26X7</option>
+                <option value="2">18X22</option>
+                <option value="3">20X22</option>
+                <option value="4">20X25X9</option>
+                <option value="5">20X33X11</option>
+                <option value="6">23X34X12</option>
+                <option value="7">27X29X9</option>
+                <option value="8">29X40X12</option>
+                <option value="9">35X42X11</option>
+                <option value="10">47X29X14</option>
+
+
+                //16X26 =1
+                //18X22 =2
+                //20X22 =3
+                //20X25X9 =4
+                //23X34X12 =5
+                //20X33X11,5 =6
+                //27X20X9 =7
+                //28X40 =8
+                //35X42X11 =9
+                //47X29,5X14 =10
             </select>
             <br> <br>
 
-            <label class="formulario-titulo">Qual o tipo de cor de fundo?</label><br>
+            <label class="formulario-titulo"><b>Qual o tipo de cor de fundo?</b></label><br>
             <div class="formulario-caixa">
                 <input type="radio" th:field="*{personalizacao}" th:value="basica" checked/> Impressão Básica(Preto,
                 Margenta(pink), Rosa Bebê, Amarelo, Azul Claro(ciano)<br>
@@ -63,10 +85,10 @@
                 Colorida(Fotográfica)<br>
             </div>
 
-            <h4>Personalizações Adicionais:</h4>
+            <h4 class="formulario-titulo4"><b>Personalizações Adicionais:</b></h4>
             <br>
 
-            <label>Plastificação:</label> <br>
+            <label><b>Plastificação:</b></label> <br>
             <input type="radio" th:field="*{plastificacao}" th:value="nao" checked/> Não<br>
             <input type="radio" th:field="*{plastificacao}" th:value="sim"/> Sim<br>
 
@@ -74,13 +96,13 @@
             <br> <br>
 
 
-            <label>Ilhós:</label> <br>
+            <label><b>Ilhós:</b></label> <br>
             <input type="radio" th:field="*{ilhos}" th:value="nao" checked/> Não <br>
             <input type="radio" th:field="*{ilhos}" th:value="sim"/> Sim <br>
 
             <!--colocar espaço-->
             <br> <br>
-            <label>Cordões:</label> <br>
+            <label><b>Cordões:</b></label> <br>
             <input type="radio" th:field="*{cordoes}" th:value="basico" checked/> Básico <br>
             <input type="radio" th:field="*{cordoes}" th:value="gorgurao"/> Gorgurão <br>
 
