--- a/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
+++ b/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
@@ -1,16 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Orçamento Sacola de Papel</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header class="cabecalho">
 
-<p>oi</p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4 col-lg-4">
+                <img th:src="@{/imagens/litoralLogo.png}" class="imagem" alt="imagem logo">
+            </div>
+            <div class="col-sm-8 col lg-8">
+                <nav class="ancora">
+                    <a href="/SacolasPlasticas">
+                        <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
+                    </a>
+                    <a href="/SacolasPapelOrcamento">
+                        <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
+                    </a>
+                    <button type="button" class="btn btn-outline-warning">Contatos</button>
+                </nav>
+            </div>
+        </div>
+    </div>
+</header>
+<main>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-center">Sacolas Personalizadas Litoral Brindes</h1>
+            </div>
+        </div>
+    </div>
+
+    <section class="orcamento-final">
+
+        <div class="orcamento-uni">
+            <h1 class="orcamento-titulo">Preço Unitário 1000 unidades</h1>
+            <p class="orcamento-p" th:text="${resultadoUni}"></p>
+        </div>
+
+        <div class="orcamento-mil">
+            <h1 class="orcamento-titulo">Preço 1000 unidades</h1>
+
+            <p class="orcamento-p" th:text="${resultadoOrcamento}"></p>
+        </div>
+
+        <div class="orcamento-quinhentos">
+            <h1>Preço Unitário 500 Unidades</h1>
+            <p class="orcamento-titulo" th:text="${resultado500uni}"></p>
+
+        </div>
+
+        <div class="orcamento-quinhentos">
+            <h1> Preço 500 Unidades</h1>
+            <p class="orcamento-titulo" th:text="${resultado500}"></p>
+
+        </div>
+
+
+    </section>
+
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/imagens/icon-instagram.svg" class="d-block w-100" alt="oba">
+            </div>
+            <div class="carousel-item">
+                <img src="/imagens/icon-whatsapp.svg" class="d-block w-100" alt="eba">
+            </div>
+            <div class="carousel-item">
+                <img src="/imagens/icon-whatsapp.svg" class="d-block w-100" alt="eta">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
 
 
-<p th:text="${resultadoOrcamento}"></p>
+
+
+
+</main>
 
 </body>
+<footer>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                <p class="footer-mini-titulo">Atendimento</p>
+                <p>8:30 às 18:00
+                    Segunda à Sexta</p>
+            </div>
+            <div class="col">
+                <div class="footer-first">
+                    <p class="footer-mini-titulo">Entre em contato conosco</p>
+
+                    <div class="footer-icons">
+                        <div class="footer-icon1">
+                            <img src="imagens/icon-whatsapp.svg" class="footer-img"><a href="https://w.app/AQCGlj"
+                                                                                       target="_blank"
+                                                                                       class="footer-link">(13)
+                            98838-8881</a>
+                        </div>
+                    </div>
+                    <div class="footer-icon1">
+                        <img src="imagens/icon-instagram.svg" class="footer-img"><a
+                            href="https://www.instagram.com/grafica.litoral.sacolas/" target="_blank"
+                            class="footer-link">@grafica.litoral.sacolas</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <p class="footer-mini-titulo" id="footer-endereco">Endereço</p>
+                <div class="footer-endereco">
+                    <p>Rua Manoel Fernandes Vicente</p>
+                    <p>1184 Maracanã Mirim</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </html>
