--- a/src/main/resources/templates/BocaVazadaBrilhoOrcamento.html
+++ b/src/main/resources/templates/BocaVazadaBrilhoOrcamento.html
@@ -22,7 +22,7 @@
                     <a href="/SacolasPlasticas">
                         <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
                     </a>
-                    <a href="/SacolasPapelOrcamento">
+                    <a href="/SacolasPapelOrcamento ">
                         <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
                     </a>
                     <button type="button" class="btn btn-outline-warning">Contatos</button>
@@ -48,7 +48,7 @@
             <th colspan="3">Sacolas Boca Vazada (HD) Alta Densidade (Fosca)</th>
         </tr>
         <tr>
-            <th>Tamanho das Sacolas</th>
+            <th class="tabela-tamanho">Tamanho das Sacolas</th>
             <th>Valor das 500 Sacolas</th>
             <th>Valor das 1000 Sacolas</th>
         </tr>
