--- a/src/main/resources/templates/SacolasPapelOrcamento.html
+++ b/src/main/resources/templates/SacolasPapelOrcamento.html
@@ -76,7 +76,7 @@
             </select>
             <br> <br>
 
-            <label class="formulario-titulo"><b>Qual o tipo de cor de fundo?</b></label><br>
+            <label class="formulario-titulo"><b>Qual o tipo de impressão</b></label><br>
             <div class="formulario-caixa">
                 <input type="radio" th:field="*{personalizacao}" th:value="basica" checked/> Impressão Básica(Preto,
                 Margenta(pink), Rosa Bebê, Amarelo, Azul Claro(ciano)<br>
