--- a/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
+++ b/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
@@ -42,29 +42,29 @@
 
     <section class="orcamento-final">
 
-        <div class="orcamento-uni">
-            <h1 class="orcamento-titulo">Preço Unitário 1000 unidades</h1>
-            <p class="orcamento-p" th:text="${resultadoUni}"></p>
+        <div class="valor-1000-unidades">
+            <div >
+                <h1 class="orcamento-final-titulo">Preço 1000 Unidades</h1>
+                <p class="valor-real" th:text="${resultadoOrcamento}"></p>
+            </div>
+
+            <div>
+                <h1 class="orcamento-final-titulo">Preço Unitário</h1>
+                <p class="valor-real" th:text="${resultadoUni}"></p>
+            </div>
         </div>
 
-        <div class="orcamento-mil">
-            <h1 class="orcamento-titulo">Preço 1000 unidades</h1>
+        <div class="valor-500-unidades">
+            <div>
+                <h1 class="orcamento-final-titulo"> Preço 500 Unidades</h1>
+                <p class="valor-real" th:text="${resultado500}"></p>
+            </div>
 
-            <p class="orcamento-p" th:text="${resultadoOrcamento}"></p>
+            <div>
+                <h1 class="orcamento-final-titulo">Preço Unitário</h1>
+                <p class="valor-real" th:text="${resultado500uni}"></p>
+            </div>
         </div>
-
-        <div class="orcamento-quinhentos">
-            <h1>Preço Unitário 500 Unidades</h1>
-            <p class="orcamento-titulo" th:text="${resultado500uni}"></p>
-
-        </div>
-
-        <div class="orcamento-quinhentos">
-            <h1> Preço 500 Unidades</h1>
-            <p class="orcamento-titulo" th:text="${resultado500}"></p>
-
-        </div>
-
 
     </section>
 
@@ -89,10 +89,6 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-
-
-
-
 
 
 </main>
@@ -136,7 +132,13 @@
         </div>
     </div>
 </footer>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </html>
