--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -214,6 +214,54 @@ footer {
     background-color: red;
 }
 
+.tabela-destaque {
+    border-collapse: collapse;
+    width: 90%;
+    margin-top: 2%;
+    margin-left: 5%;
+    color: white;
+    border: 10px solid var(--cor-fundo);
+    line-height: 40px;
+    text-align: center;
+}
+
+.titulo-detalhe {
+
+
+}
+
+.descricao-detalhe {
+
+    border: 10px solid var(--cor-fundo);
+}
+
+.descricao-detalhe , .titulo-detalhe{
+    padding-right: 100px;
+    padding-bottom: 3%;
+    text-align: left;
+}
+
+/*.cores-disponiveis {*/
+/*    width: 40%;*/
+/*    height: 70%;*/
+/*    margin-top: 5%;*/
+/*    background-color: white;*/
+/*    border: solid 4px black;*/
+/*    text-align: center;*/
+/*    padding: 10px;*/
+/*    border-radius: 10px;*/
+/*    box-shadow: 5px 6px 5px black;*/
+/*}*/
+
+/*.cores-coluna {*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    justify-content: center;*/
+/*}*/
+
+
+
+
 .tabela-max2{
     margin-top: 2%;
     width: 90%;
