Imagens e tabelas finalizadas

--- a/src/main/resources/templates/AlcaCamisetaOrcamento.html
+++ b/src/main/resources/templates/AlcaCamisetaOrcamento.html
@@ -100,37 +100,49 @@
       <td>R$ 995,00</td>
       <td>R$ 1.850,00</td>
     </tr>
-  </table>
-  <table class="tabela-max2">
-    <div>
-      <thead class="tabela-cor">
-      <tr>
-        <th colspan="2">Tamanho 70 X 90 e 90 X 100 Somente:</th>
-      </tr>
-      </thead>
-      <tbody>
 
-      <tr>
-        <td>Amarelo</td>
-        <td>Azul</td>
-      </tr>
-      <tr>
-        <td>Transparente</td>
-        <td>Vermelho</td>
-      </tr>
-      <tr>
-        <td>Rosa</td>
-        <td>Prata</td>
-      </tr>
-      </tbody>
+    <tr>
+      <td colspan="3" class="empty">.</td>
+    </tr>
+
+  </table>
+
+  <section>
+    <div class="titulo-detalhe">
+      <h1>Detalhes do Produto</h1>
     </div>
-
-  </table>
-
-  <ul class="lista-text">
-    <li>Coloridas Acréscimo de 15%</li>
-    <li>Tamanho 35 X 45 X 0,4 Somente Amarelo</li>
-  </ul>
+    <div>
+      <div>
+        <div>
+          <table class="tabela-descricao">
+            <tbody>
+            <tr>
+              <th class="tabela-nome">Nome:</th>
+              <td class="tabela-detalhe">Sacolas Alça Camiseta Branca (HD) Alta Densidade</td>
+            </tr>
+            <tr>
+              <th class="tabela-nome">Entrega Estimada:</th>
+              <td class="tabela-detalhe">15 dias úteis</td>
+            </tr>
+            <tr>
+              <th class="tabela-nome">Cor Disponível:</th>
+              <td class="tabela-detalhe">Branco
+            </tr>
+            <tr>
+              <th class="tabela-nome">Demais Cores:</th>
+              <td class="tabela-detalhe">ACRÉSCIMO DE 15%</td>
+            </tr>
+            <tr>
+              <th class="tabela-nome">Exceção:</th>
+              <td class="tabela-detalhe">Tamanho 35 X 45 X 0,4 Somente: Amarelo e Branco
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <a href="/SacolasPlasticas" class="botao-voltar">
     <button type="button" class="btn btn-outline-warning btn-back">Voltar</button>
