--- a/src/main/resources/templates/AlcaFitaOrcamento.html
+++ b/src/main/resources/templates/AlcaFitaOrcamento.html
@@ -74,99 +74,125 @@
             <td>R$ 1.750,00</td>
         </tr>
         </tbody>
-    </table>
-    <table class="tabela-max2">
-        <thead class="tabela-cor">
+
         <tr>
-            <th colspan="2">Cores Disponiveis:</th>
+            <td colspan="3" class="empty">.</td>
         </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>Prata</td>
-            <td>Marrom</td>
-        </tr>
-        <tr>
-            <td>Ouro</td>
-            <td>Amarelo</td>
-        </tr>
-        <tr>
-            <td>Azul</td>
-            <td>Rosa</td>
-        </tr>
-        <tr>
-            <td>Roxo</td>
-            <td>Rosa Bebê</td>
-        </tr>
-        <tr>
-            <td> Lilás</td>
-            <td>Transparente</td>
-        </tr>
-        <tr>
-            <td>Vermelho</td>
-            <td>Branco</td>
-        </tr>
-        <tr>
-            <td>Laranja</td>
-            <td>Preto</td>
-        </tr>
-        <tr>
-            <td>Verde Limão</td>
-            <td>Verde Claro</td>
-        </tr>
-        </tbody>
+
     </table>
 
+    <section>
+        <div class="titulo-detalhe">
+            <h1>Detalhes do Produto</h1>
+        </div>
+        <div>
+            <table class="tabela-descricao">
+                <tbody>
+                <tr>
+                    <th class="tabela-nome">Nome:</th>
+                    <td class="tabela-detalhe">Sacolas Boca Vazada (HD) Alta Densidade (Fosca)</td>
+                </tr>
+                <tr>
+                    <th class="tabela-nome">Entrega Estimada:</th>
+                    <td class="tabela-detalhe">15 dias úteis</td>
+                </tr>
+                <tr>
+                    <th class="tabela-nome">Cores Disponíveis:</th>
+                    <td class="tabela-detalhe">Amarelo,
+                        Azul,
+                        Branco,
+                        Laranja,
+                        Lilás,
+                        Ouro,
+                        Marrom,
+                        Prata, <br>
+                        Preto,
+                        Rosa,
+                        Rosa bebê,
+                        Roxo,
+                        Transparente,
+                        Verde Claro,
+                        Verde Limão e
+                        Vermelho
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+
+    <br>
+    <br>
 
     <table class="tabela-max1">
-    <th colspan="4">Sacolas Alça Fita (HD) Alta Densidade (Brilho)</th>
-    </tr>
-    <tr>
-        <th>Tamanho das Sacolas</th>
-        <th>Tamanho</th>
-        <th>Valor das 500 Sacolas</th>
-        <th>Valor das 1000 Sacolas</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr class="linha1">
-        <td>30 X 45 X 0,15</td>
-        <td>P</td>
-        <td>R$ 725,00</td>
-        <td>R$ 1.250,00</td>
-    </tr>
-    <tr class="linha2">
-        <td>40 X 50 X 0,15</td>
-        <td>M</td>
-        <td>R$ 865,00</td>
-        <td>R$ 1.625,00</td>
-    </tr>
-    <tr class="linha3">
-        <td>45 X 55 X 0,15</td>
-        <td>G</td>
-        <td>R$ 1.025,00</td>
-        <td>R$ 1.900,00</td>
-    </tr>
-    </tbody>
-    </table>
-    </table>
-    <table class="tabela-max2">
-        <thead class="tabela-cor">
+        <th colspan="4">Sacolas Alça Fita (HD) Alta Densidade (Brilho)</th>
+        </tr>
         <tr>
-            <th colspan="2">Cores Disponiveis:</th>
+            <th>Tamanho das Sacolas</th>
+            <th>Tamanho</th>
+            <th>Valor das 500 Sacolas</th>
+            <th>Valor das 1000 Sacolas</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>Prata</td>
-            <td>Branco</td>
+        <tr class="linha1">
+            <td>30 X 45 X 0,15</td>
+            <td>P</td>
+            <td>R$ 725,00</td>
+            <td>R$ 1.250,00</td>
         </tr>
-        <tr>
-            <td>Preto</td>
-            <td>Amarelo</td>
+        <tr class="linha2">
+            <td>40 X 50 X 0,15</td>
+            <td>M</td>
+            <td>R$ 865,00</td>
+            <td>R$ 1.625,00</td>
+        </tr>
+        <tr class="linha3">
+            <td>45 X 55 X 0,15</td>
+            <td>G</td>
+            <td>R$ 1.025,00</td>
+            <td>R$ 1.900,00</td>
         </tr>
         </tbody>
     </table>
+
+    <tr>
+        <td colspan="3" class="empty">.</td>
+    </tr>
+
+    </table>
+
+    <section>
+        <div class="titulo-detalhe">
+            <h1>Detalhes do Produto</h1>
+        </div>
+        <div>
+            <div>
+                <div>
+                    <table class="tabela-descricao">
+                        <tbody>
+                        <tr>
+                            <th class="tabela-nome">Nome:</th>
+                            <td class="tabela-detalhe">Sacolas Alça Fita (HD) Alta Densidade (Brilho)</td>
+                        </tr>
+                        <tr>
+                            <th class="tabela-nome">Entrega Estimada:</th>
+                            <td class="tabela-detalhe">15 dias úteis</td>
+                        </tr>
+                        <tr>
+                            <th class="tabela-nome">Cores Disponíveis:</th>
+                            <td class="tabela-detalhe">Amarelo,
+                                Branco,
+                                Prata e
+                                Preto
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <a href="/SacolasPlasticas" class="botao-voltar">
         <button type="button" class="btn btn-outline-warning btn-back">Voltar</button>
