--- a/src/main/resources/templates/BocaVazadaBrilhoOrcamento.html
+++ b/src/main/resources/templates/BocaVazadaBrilhoOrcamento.html
@@ -45,10 +45,10 @@
         <caption class="tabela-titulo">Tabela de Sacolas</caption>
         <thead class="tabela-head">
         <tr class="tabela-subtitulo">
-            <th colspan="3">Sacolas Boca Vazada (HD) Alta Densidade (Fosca)</th>
+            <th colspan="3">Sacolas Boca Vazada (HD) Alta Densidade (Brilho)</th>
         </tr>
         <tr>
-            <th class="tabela-tamanho">Tamanho das Sacolas</th>
+            <th>Tamanho das Sacolas</th>
             <th>Valor das 500 Sacolas</th>
             <th>Valor das 1000 Sacolas</th>
         </tr>
@@ -89,94 +89,73 @@
             <td>R$ 750,00</td>
             <td>R$ 1.250,00</td>
         </tr>
-        <!--        <tr>-->
-        <!--            <td colspan="3" class="empty">.</td>-->
-        <!--        </tr>-->
+                <tr>
+                    <td colspan="3" class="empty">.</td>
+                </tr>
     </table>
-    <table class="tabela-max2">
-        <div id="centraliza-CoresDisponiveis">
-            <thead class="tabela-cor">
-            <tr>
-                <th colspan="2" class="tabela-subtitulo-cor">Cores Disponiveis:</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>Prata</td>
-                <td>Rosa</td>
-            </tr>
-            <tr>
-                <td>Ouro</td>
-                <td>Rosa Bebê</td>
-            </tr>
-            <tr>
-                <td>Roxo</td>
-                <td>Creme</td>
-            </tr>
-            <tr>
-                <td>Azul</td>
-                <td>Transparente</td>
-            </tr>
-            <tr>
-                <td>Azul Bebê</td>
-                <td>Vinho</td>
-            </tr>
-            <tr>
-                <td>Vermelho</td>
-                <td>Preto</td>
-            </tr>
-            <tr>
-                <td>Laranja</td>
-                <td>Branco</td>
-            </tr>
-            <tr>
-                <td>Verde Claro</td>
-                <td>Amarelo</td>
-            </tr>
-            <tr>
-                <td>Verde Bandeira</td>
-            </tr>
-            </tbody>
+
+    <section>
+        <div class="titulo-detalhe">
+            <h1>Detalhes do Produto</h1>
         </div>
-
-    </table>
-    <table class="tabela-max3">
-        <thead>
-        <tr>
-            <th colspan="2">Tamanho 16 X 20 Somente:</th>
-            <th>45 X 60 Somente:</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>Branco</td>
-            <td>Prata</td>
-            <td>Branco</td>
-        </tr>
-        <tr>
-            <td>Preto</td>
-            <td>Laranja</td>
-            <td>Preto</td>
-        </tr>
-        <tr>
-            <td>Amarelo</td>
-            <td>Verde Limão</td>
-        </tr>
-        <tr>
-            <td>Azul</td>
-            <td>Roxo</td>
-        </tr>
-        <tr>
-            <td>Vermelho</td>
-            <td>Rosa Bebê</td>
-        </tr>
-        <tr>
-            <td>Ouro</td>
-            <td>Azul Bebê</td>
-        </tr>
-        </tbody>
-
-    </table>
+        <div>
+            <div>
+                <div>
+                    <table class="tabela-descricao">
+                        <tbody>
+                        <tr>
+                            <th class="tabela-nome">Nome:</th>
+                            <td class="tabela-detalhe">Sacolas Boca Vazada (HD) Alta Densidade (Brilho)</td>
+                        </tr>
+                        <tr>
+                            <th class="tabela-nome">Entrega Estimada:</th>
+                            <td class="tabela-detalhe">15 dias úteis</td>
+                        </tr>
+                        <tr>
+                            <th class="tabela-nome">Cores Disponíveis:</th>
+                            <td class="tabela-detalhe">Amarelo,
+                                Azul bebê,
+                                Azul,
+                                Branco,
+                                Creme,
+                                Laranja,
+                                Ouro,
+                                Prata,
+                                Preto, <br>
+                                Rosa,
+                                Rosa bebê,
+                                Roxo,
+                                Transparente,
+                                Verde Bandeira,
+                                Verde Claro,
+                                Vermelho e
+                                Vinho
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="tabela-nome">Exceção:</th>
+                            <td class="tabela-detalhe">Tamanho 16 X 20 Somente: Amarelo,
+                                Azul,
+                                Azul bebê,
+                                Branco,
+                                Laranja,
+                                Ouro, <br>
+                                Prata,
+                                Preto,
+                                Rosa Bebê,
+                                Roxo,
+                                Vermelho e
+                                Verde Limão.
+                                <br>
+                                Tamanho 45 X 60 Somente: Branco e Preto
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <a href="/SacolasPlasticas" class="botao-voltar">
         <button type="button" class="btn btn-outline-warning btn-back">Voltar</button>
