--- a/src/main/resources/templates/SacolasPlasticas.html
+++ b/src/main/resources/templates/SacolasPlasticas.html
@@ -37,13 +37,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/imagens/icon-instagram.svg" class="d-block w-100" alt="oba">
+                <img src="/imagens/1.png" class="d-block w-100" alt="oba">
             </div>
             <div class="carousel-item">
-                <img src="/imagens/icon-whatsapp.svg" class="d-block w-100" alt="eba">
+                <img src="/imagens/2.png" class="d-block w-100" alt="eba">
             </div>
             <div class="carousel-item">
-                <img src="/imagens/icon-whatsapp.svg" class="d-block w-100" alt="eta">
+                <img src="/imagens/3.png" class="d-block w-100" alt="eta">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -68,7 +68,7 @@
             <div class="col-sm-6 mb-3 mb-sm-0">
                 <div class="card">
                     <div class="card-body">
-                        <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
+                        <img th:src="@{/imagens/Ff.png}"  class="imagem-card" alt="imagem card">
                         <h5 class="card-title">Boca Vazada Fosca </h5>
                         <p class="card-text">A "alça vazada" refere-se a um corte na parte superior da sacola, que funciona como uma alça embutida para facilitar o transporte. E o acabamento fosco é aquele sem brilho</p>
                         <a href="/bocaVazadaFoscaOrcamento" class="btn btn-primary">Veja Orçamento</a>
@@ -78,7 +78,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
+                        <img th:src="@{/imagens/alca-boca-vazada-fosca.png}" class="imagem-card" alt="imagem card">
                         <h5 class="card-title">Boca Vazada Brilho</h5>
                         <p class="card-text">Com acabamento brilhante, que dá um visual mais chamativo. A alça é aquele recorte na parte de cima para segurar a sacola. Normalmente, ela é usada quando se quer algo com um toque mais sofisticado.</p>
                         <a href="/BocaVazadaBrilhoOrcamento" class="btn btn-primary">Veja Orçamento</a>
@@ -94,7 +94,7 @@
             <div class="col-sm-6 mb-3 mb-sm-0">
                 <div class="card">
                     <div class="card-body">
-                        <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
+                        <img th:src="@{/imagens/alca-camiseta.png}" class="imagem-card" alt="imagem card">
                         <h5 class="card-title">Alça Camiseta</h5>
                         <p class="card-text">A sacola alça camiseta é aquele modelo clássico que tem duas alças parecidas com as de uma camiseta. É muito usada em supermercados e lojas, porque é prática e pode carregar bastante coisa.</p>
                         <a href="/AlcaCamisetaOrcamento" class="btn btn-primary">Veja Orçamento</a>
@@ -104,7 +104,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
+                        <img th:src="@{/imagens/alca-fita.png}" class="imagem-card" alt="imagem card">
                         <h5 class="card-title">Alça Fita</h5>
                         <p class="card-text">Com alças fixadas na parte superior da sacola que dão um toque mais elegante e confortável para carrega-la. Esse tipo de sacola é bastante usado em lojas de roupas, presentes ou produtos mais sofisticados, porque além de funcional, ela passa uma imagem de capricho.</p>
                         <a href="/AlcaFitaOrcamento" class="btn btn-primary">Veja Orçamento</a>
