--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -90,6 +90,7 @@ body {
 
 .imagem-card {
     width: 50%;
+
 }
 
 .card-title {
@@ -210,10 +211,6 @@ footer {
     text-align: center;
 }
 
-.tabela-tamanho {
-    background-color: red;
-}
-
 .tabela-destaque {
     border-collapse: collapse;
     width: 90%;
@@ -225,17 +222,38 @@ footer {
     text-align: center;
 }
 
+/*Parte nova que o davi fez:*/
 .titulo-detalhe {
-
+    padding-top: 5px;
+    text-align: center;
+    color: white;
+    border-bottom: 2px solid white;
+    border-top: 2px solid white;
+    font-size: 14px;
+    font-family: ""
 
 }
 
-.descricao-detalhe {
-
-    border: 10px solid var(--cor-fundo);
+.tabela-nome{
+    color: white;
+    font-size: 14px;
+    border: 20px solid var(--cor-fundo);
+}
+.tabela-descricao {
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
-.descricao-detalhe , .titulo-detalhe{
+    .tabela-detalhe {
+        color: white;
+        font-size: 14px;
+        border: 20px solid var(--cor-fundo);
+    }
+    /*Final da parte nova que o davi fez*/
+
+
+.descricao-detalhe{
     padding-right: 100px;
     padding-bottom: 3%;
     text-align: left;
@@ -287,7 +305,7 @@ footer {
     color: var(--cor-fundo);
     border: 10px solid var(--cor-fundo);
     border-top: 2px solid #ccc;
-    border-bottom: 2px solid #ccc;
+    /*border-bottom: 2px solid #ccc;*/
     border-left: 2px solid var(--cor-fundo);
     border-right: 2px solid var(--cor-fundo);
 }
