--- a/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
+++ b/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
@@ -71,13 +71,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/imagens/icon-instagram.svg" class="d-block w-100" alt="oba">
+                <img src="/imagens/1.png" class="d-block w-100" alt="oba">
             </div>
             <div class="carousel-item">
-                <img src="/imagens/icon-whatsapp.svg" class="d-block w-100" alt="eba">
+                <img src="/imagens/2.png" class="d-block w-100" alt="eba">
             </div>
             <div class="carousel-item">
-                <img src="/imagens/icon-whatsapp.svg" class="d-block w-100" alt="eta">
+                <img src="/imagens/3.png" class="d-block w-100" alt="eta">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
