--- a/src/main/resources/templates/bocaVazadaFoscaOrcamento.html
+++ b/src/main/resources/templates/bocaVazadaFoscaOrcamento.html
@@ -81,112 +81,54 @@
         <tr>
             <td colspan="3" class="empty">.</td>
         </tr>
-        <!--        <thead>-->
-        <!--        <tr>-->
-        <!--            <th colspan="2" class="tabela-subtitulo-cor">Cores Disponiveis:</th>-->
-        <!--            <th class="tabela-subtitulo-cor">Tamanho 16 X 22 Somente:</th>-->
-        <!--        </tr>-->
-        <!--        </thead>-->
-        <!--        <tbody>-->
-        <!--        <tr>-->
-        <!--            <td>Prata</td>-->
-        <!--            <td>Amarelo</td>-->
-        <!--            <td>Rosa Bebê</td>-->
-        <!--        </tr>-->
-        <!--        <tr>-->
-        <!--            <td>Ouro</td>-->
-        <!--            <td>Verde Claro</td>-->
-        <!--            <td>Rosa</td>-->
-        <!--        </tr>-->
-        <!--        <tr>-->
-        <!--            <td>Roxo</td>-->
-        <!--            <td>Verde Bandeira</td>-->
-        <!--            <td>Vermelho</td>-->
-        <!--        </tr>-->
-        <!--        <tr>-->
-        <!--            <td>Lilás</td>-->
-        <!--            <td>Rosa Bebê</td>-->
-        <!--            <td>Azul</td>-->
-        <!--        </tr>-->
-        <!--        <tr>-->
-        <!--            <td>Azul Bebê</td>-->
-        <!--            <td>Rosa</td>-->
-        <!--            <td>Marrom</td>-->
-        <!--        </tr>-->
-        <!--        <tr>-->
-        <!--            <td>Azul</td>-->
-        <!--            <td>Marrom</td>-->
-        <!--        </tr>-->
-        <!--        <tr>-->
-        <!--            <td>Vermelho</td>-->
-        <!--            <td>Vinho</td>-->
-        <!--        </tr>-->
-        <!--        <tr>-->
-        <!--            <td>Laranja</td>-->
-        <!--        </tr>-->
-        <!--        </tbody>-->
+        </tbody>
     </table>
 
     <section>
-        <h1>Detalhes do Produto</h1>
-
-        <table class="tabela-destaque">
-            <tbody>
-            <tr>
-                <td class="titulo-detalhe"><b>Nome</b></td>
-                <td class="descricao-detalhe"> Sacolas Boca Vazada (HD) Alta Densidade (Fosca)</td>
-            </tr>
-            <tr>
-                <td class="titulo-detalhe"><b>Entrega estimada</b></td>
-                <td class="descricao-detalhe">15 dias úteis.</td>
-            </tr>
-            <tr>
-                <td class="titulo-detalhe"><b>Cores Disponíveis</b></td>
-                <td class="descricao-detalhe">Amarelo,
-                    Azul bebê,
-                    Azul,
-                    Laranja,
-                    Lilás,
-                    Marrom,
-                    Ouro,
-                    Prata,
-                    Rosa bebê,
-                    Roxo,
-                    Verde Bandeira,
-                    Verde Claro,
-                    Vermelho e
-                    Vinho.</td>
-            </tr>
-            <tr>
-                <td class="titulo-detalhe"><b>Exceção</b></td>
-                <td class="descricao-detalhe">Tamanho 16 X 22 Somente: Azul, Marrom, Rosa, Rosa Bebê e Vermelho. </td>
-            </tr>
-            </tbody>
-        </table>
-
-<!--        <div class="cores-disponiveis">-->
-<!--            <h2>Cores Disponíveis</h2>-->
-<!--            <div class="cores-coluna">-->
-<!--                <div class="cores-coluna1">-->
-<!--                    <p>Amarelo</p>-->
-<!--                    <p>Azul bebê</p>-->
-<!--                    <p>Azul</p>-->
-<!--                    <p>Laranja</p>-->
-<!--                    <p>Lilás</p>-->
-<!--                    <p>Marrom</p>-->
-<!--                    <p>Ouro</p>-->
-<!--                    <p>Prata</p>-->
-<!--                </div>-->
-<!--                <div class="cores-coluna2">-->
-<!--                    <p>Rosa</p>-->
-<!--                    <p>Rosa Bebê</p>-->
-<!--                    <p>Roxo</p>-->
-<!--                    <p>Verde Bandeira</p>-->
-<!--                    <p>Verde Claro</p>-->
-<!--                    <p>Vermelho</p>-->
-<!--                    <p>Vinho</p>-->
-<!--                </div>-->
-<!--            </div>-->
+        <div class="titulo-detalhe">
+            <h1>Detalhes do Produto</h1>
+        </div>
+        <div>
+            <div>
+                <div>
+                    <table class="tabela-descricao">
+                        <tbody>
+                        <tr>
+                            <th class="tabela-nome">Nome:</th>
+                            <td class="tabela-detalhe">Sacolas Boca Vazada (HD) Alta Densidade (Fosca)</td>
+                        </tr>
+                        <tr>
+                            <th class="tabela-nome">Entrega Estimada:</th>
+                            <td class="tabela-detalhe">15 dias úteis</td>
+                        </tr>
+                        <tr>
+                            <th class="tabela-nome">Cores Disponíveis:</th>
+                            <td class="tabela-detalhe">Amarelo,
+                                Azul bebê,
+                                Azul,
+                                Laranja,
+                                Lilás,
+                                Marrom,
+                                Ouro, <br>
+                                Prata,
+                                Rosa bebê,
+                                Roxo,
+                                Verde Bandeira,
+                                Verde Claro,
+                                Vermelho e
+                                Vinho
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="tabela-nome">Exceção:</th>
+                            <td class="tabela-detalhe">Tamanho 16 X 22 Somente: Azul, Marrom, Rosa, Rosa Bebê e
+                                Vermelho.
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </section>
 
