--- a/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
+++ b/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
@@ -74,7 +74,13 @@
                 <img src="/imagens/1.png" class="d-block w-100" alt="oba">
             </div>
             <div class="carousel-item">
+                <img src="/imagens/4.png" class="d-block w-100" alt="eta">
+            </div>
+            <div class="carousel-item">
                 <img src="/imagens/2.png" class="d-block w-100" alt="eba">
+            </div>
+            <div class="carousel-item">
+                <img src="/imagens/5.png" class="d-block w-100" alt="eta">
             </div>
             <div class="carousel-item">
                 <img src="/imagens/3.png" class="d-block w-100" alt="eta">
