--- a/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
+++ b/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
@@ -18,6 +18,7 @@
                 <img th:src="@{/imagens/litoralLogo.png}" class="imagem" alt="imagem logo">
             </div>
             <div class="col-sm-8 col lg-8">
+
                 <nav class="ancora">
                     <a href="/SacolasPlasticas">
                         <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
@@ -25,7 +26,15 @@
                     <a href="/SacolasPapelOrcamento">
                         <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
                     </a>
-                    <button type="button" class="btn btn-outline-warning">Contatos</button>
+
+
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-warning dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contatos</button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item link-insta" href="https://www.instagram.com/grafica.litoral.sacolas/" target="_blank">grafica.litoral.sacolas</a>
+                            <a class="dropdown-item" href="#">(13) 98838-8881</a>
+                        </div>
+                    </div>
                 </nav>
             </div>
         </div>
@@ -74,13 +83,13 @@
                 <img src="/imagens/1.png" class="d-block w-100" alt="oba">
             </div>
             <div class="carousel-item">
-                <img src="/imagens/4.png" class="d-block w-100" alt="eta">
+                <img src="/imagens/4.1.png" class="d-block w-100" alt="eta">
             </div>
             <div class="carousel-item">
                 <img src="/imagens/2.png" class="d-block w-100" alt="eba">
             </div>
             <div class="carousel-item">
-                <img src="/imagens/5.png" class="d-block w-100" alt="eta">
+                <img src="/imagens/5.1.png" class="d-block w-100" alt="eta">
             </div>
             <div class="carousel-item">
                 <img src="/imagens/3.png" class="d-block w-100" alt="eta">
