--- a/src/main/resources/templates/SacolasPlasticas.html
+++ b/src/main/resources/templates/SacolasPlasticas.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<!--    <link>https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css</link>-->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -19,6 +19,7 @@
                 <img th:src="@{/imagens/litoralLogo.png}" class="imagem" alt="imagem logo">
             </div>
             <div class="col-sm-8 col lg-8">
+
                 <nav class="ancora">
                         <a href="/SacolasPlasticas">
                             <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
@@ -26,7 +27,15 @@
                         <a href="/SacolasPapelOrcamento">
                             <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
                         </a>
-                        <button type="button" class="btn btn-outline-warning">Contatos</button>
+
+
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-warning dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contatos</button>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item link-insta" href="https://www.instagram.com/grafica.litoral.sacolas/" target="_blank">grafica.litoral.sacolas</a>
+                                <a class="dropdown-item" href="#">(13) 98838-8881</a>
+                            </div>
+                        </div>
                 </nav>
             </div>
         </div>
@@ -40,13 +49,13 @@
                 <img src="/imagens/1.png" class="d-block w-100" alt="oba">
             </div>
             <div class="carousel-item">
-                <img src="/imagens/4.png" class="d-block w-100" alt="eta">
+                <img src="/imagens/4.1.png" class="d-block w-100" alt="eta">
             </div>
             <div class="carousel-item">
                 <img src="/imagens/2.png" class="d-block w-100" alt="eba">
             </div>
             <div class="carousel-item">
-                <img src="/imagens/5.png" class="d-block w-100" alt="eta">
+                <img src="/imagens/5.1.png" class="d-block w-100" alt="eta">
             </div>
             <div class="carousel-item">
                 <img src="/imagens/3.png" class="d-block w-100" alt="eta">
@@ -61,13 +70,6 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-<!--    <div class="container-fluid">-->
-<!--        <div class="row">-->
-<!--            <div class="col-12">-->
-<!--                <h1 class="text-center">Sacolas Personalizadas Plástico</h1>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
 
     <div class="container-fluid">
         <div class="row">
@@ -164,6 +166,7 @@
     </div>
 </footer>
 </body>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
