--- a/src/main/resources/templates/SacolasPlasticas.html
+++ b/src/main/resources/templates/SacolasPlasticas.html
@@ -58,7 +58,7 @@
                 <img src="/imagens/5.1.png" class="d-block w-100" alt="eta">
             </div>
             <div class="carousel-item">
-                <img src="/imagens/3.png" class="d-block w-100" alt="eta">
+                <img src="/imagens/3.png" class="d-block w-100" alt="aoba">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
